# polyglot-import-csv

./: .gitignore  .gitmodules  .zipignore  README.md  docker-compose.yml  polyglotimportcsv.spec  pom.xml  pyproject.toml  requirements.txt  run_example.ps1  run_example.sh  setup.py
.claude/plans/: e-commerce_polyglot_demo_759316cf.plan.md
.cursor/plans/: enriquecer_tcc_json_schema_02427f39.plan.md  tcc_i_—_polimento_relatório_+_running_example_08f10d20.plan.md
_docs/: LucasBuenoCesario-PolyglotImportCSV-Report-TCC1.docx  abntex2.latex  polyglot-import-csv.md  references.bib
_docs/scripts/: gerar-odt.ps1  gerar-odt.sh
_docs/tcc-pandoc-abnt-corrigido-v3/: gerar-odt.ps1  gerar-pdf.ps1  gerar-tex.ps1  polyglot-import-csv.md
data/ecommerce/: README.md  ecommerce_add_to_cart.csv  ecommerce_data.csv  ecommerce_data.xlsx  ecommerce_data_claude.csv  ecommerce_importconfig.json  ecommerce_join.csv  (+6 more)
docs/: ARCHITECTURE.md  LucasBuenoCesario-PolyglotImportCSV-Report-TCC1.md  README.txt  abntex2.latex
docs-tcc/: LucasBuenoCesario-PolyglotImportCSV-Report-TCC1.md  LucasBuenoCesario-PolyglotImportCSV-Report-TCC1.odt  README.txt  abnt-ufsc-reference.odt  abntex2.latex  brainstorming-tcc1-superpowers.md  references.bib  revisao-gaps-tcc-codigo-2026-07-01.md
logs/: .gitignore
scripts/: console.sh  inspect_persisted_data.py  run_example.completion.bash  run_example_macos.sh  run_example_windows.bat  run_example_windows.ps1
tests/: test_config_parser.py  test_entity_utils.py  test_filter_engine.py  test_materialize.py  test_runner_registry.py  test_validation_dry_run.py
(+85 files in other folders)
